<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:minHeight="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:padding="3dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:text="@string/backActivity"
                android:textSize="@dimen/sizeText"
                android:id="@+id/back" />
            <TextView
                android:layout_weight="2"
                android:text="@string/settings"
                android:gravity="center"
                android:textSize="@dimen/sizeText"
                android:textColor="@color/noTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="2"
                android:text="@string/save"
                android:gravity="right"
                android:textSize="@dimen/sizeText"
                android:padding="3dp"
                android:textColor="@color/textColor"
                android:id="@+id/save"
                android:layout_marginRight="@dimen/layout_marginRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:text="@string/common"
            android:gravity="bottom"
            android:padding="@dimen/paddingText"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearCarMode"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="50dp"
            android:textColor="@color/noTextColor"
            android:textSize="@dimen/sizeText"
            android:text="@string/carModel"/>
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="2"
            android:text="@string/modeCar"
            android:gravity="right"
            android:textSize="@dimen/sizeText"
            android:background="@android:color/transparent"
            android:textColor="@color/noTextColor"
            android:id="@+id/modelCar"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearSampleInterval"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="50dp"
            android:textColor="@color/noTextColor"
            android:textSize="@dimen/sizeText"
            android:text="@string/sampleInterval"/>
        <TextView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginRight="10dp"
            android:id="@+id/vspinerInterval"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/noTextColor"
            android:textSize="@dimen/sizeText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearDataCommunication"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="50dp"
            android:textColor="@color/noTextColor"
            android:textSize="@dimen/sizeText"
            android:text="@string/dataCommunication"/>
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="2"
            android:text="1"
            android:gravity="right"
            android:textSize="@dimen/sizeText"
            android:background="@android:color/transparent"
            android:textColor="@color/noTextColor"
            android:id="@+id/dataInterval"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:text="@string/canAdapter"
            android:gravity="bottom"
            android:padding="@dimen/paddingText"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearAdapterIp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="50dp"
            android:textColor="@color/noTextColor"
            android:textSize="@dimen/sizeText"
            android:text="@string/adapterIp"/>
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="2"

            android:text="@string/IpAdapter"
            android:gravity="right"
            android:textSize="@dimen/sizeText"
            android:background="@android:color/transparent"
            android:textColor="@color/noTextColor"
            android:id="@+id/ipAddress"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearAdapterPort"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="50dp"
            android:textColor="@color/noTextColor"
            android:textSize="@dimen/sizeText"
            android:text="@string/adapterPort"/>
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="2"
            android:text="@string/Port"
            android:gravity="right"
            android:textSize="@dimen/sizeText"
            android:background="@android:color/transparent"
            android:textColor="@color/noTextColor"
            android:id="@+id/adapterPort"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

</LinearLayout>
